# nlp_group19

./: .gitignore  README.md  a100-job.slurm  csv_combiner.py  deepseek_student_eval.ipynb  distillation.ipynb  distillation.py  distillation_gemma.ipynb  evaluate.py  first_10.csv  gemma3_classification_results.csv  gemma3cleaner.ipynb  lossplot.py  model.py  model_card.py  phase1_distillation.ipynb  phase2_distillation.ipynb  preprocess.ipynb  preprocess.py  preprocess_ethan_update.ipynb  preprocess_ethan_update2.ipynb  process_files.ipynb  pyproject.toml  requirements.txt  student_eval.ipynb  student_eval.py
Archive/: Training BERT.ipynb  first_10.jsonl  gemma3_classification_results.csv  preprocess_ethan_update.ipynb  student_eval.ipynb
Cleaned Work/: titan-job.slurm
Distillation_jinhao/: classification_distillation.ipynb
Student_Training_Data/: GPT.csv
baselines/: Majority Class.py  equally random.py
bert_non_og/: train.ipynb
data/: test_cleaned.jsonl  train.csv
gemma3-phase1/: adapter_config.json  adapter_model.safetensors
gemma3-phase1-alpha/: adapter_config.json
llama-student-phase1/: adapter_model.safetensors
meta-llama-corrected/: sixth_partition_llama.csv
phase1_v1/: distillation.ipynb  distillation_gemma.ipynb
phase1_v2/: final_training_code.ipynb  phase1_distillation_after_edits copy.ipynb  phase1_distillation_after_edits.ipynb  phase1_distillation_before_edits.ipynb  phase1_distillation_from_paper.ipynb  phase1_distillation_from_paper.py  predict.py
teacher_evaluations/: model.py  preprocess_ethan_update.ipynb
(+214 files in other folders)
