[tool.poetry]
name = "nlp-group19"
version = "0.1.0"
description = ""
authors = ["Timenikhil <48746822+Timenikhil@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.3"
notebook = "^7.3.3"
transformers = "^4.50.3"
torch = "2.6.0"
seaborn = "^0.13.2"
certifi = "2025.1.31"
charset-normalizer = "3.4.1"
dotenv = "0.9.9"
filelock = "3.18.0"
fsspec = "2025.3.0"
huggingface-hub = "0.29.3"
idna = "3.10"
jinja2 = "3.1.6"
markupsafe = "3.0.2"
mpmath = "1.3.0"
networkx = "3.4.2"
nltk = "3.9.1"
numpy = "2.2.4"
packaging = "24.2"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.1.0"
pytz = "2025.2"
pyyaml = "6.0.2"
requests = "2.32.3"
six = "1.17.0"
sympy = "1.13.1"
tqdm = "4.67.1"
typing-extensions = "4.13.0"
tzdata = "2025.2"
urllib3 = "2.3.0"
together = "^1.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
